# FinSight

./: .env.example  .gitignore  README.md  VERCEL_DEPLOYMENT.md  app.py  financial_analysis.py  main.py  modeling_assumptions.txt  models.py  pyproject.toml  requirements.txt  vercel.json
static/css/: styles.css
static/js/: main.js
templates/: index.html  layout.html  results.html
