[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "llama-cloud>=0.1.18",
    "llama-cloud-services>=0.6.12",
    "llama-index>=0.12.30",
    "llama-index-core>=0.12.31",
    "llama-index-llms-openai>=0.3.37",
    "nest-asyncio>=1.6.0",
    "openai>=1.75.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "werkzeug>=3.1.3",
]
